// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component <Procedures /> should renders correctly and testing another methods 1`] = `
<section
  className="page-wrapper"
>
  <div
    className="section"
  >
    <Row
      bsClass="row"
      componentClass="div"
    >
      <Col
        bsClass="col"
        className=""
        componentClass="div"
        xs={12}
      >
        <div
          className="panel panel-primary"
        >
          <PluginListHeader
            currentPanel="proceduresMain"
            isBtnExpandVisible={false}
            isBtnTableVisible={false}
            name="proceduresMain"
            onExpand={[Function]}
            onFilterChange={[Function]}
            panelTitle="Procedures"
          />
          <PluginMainPanel
            columnNameSortBy="name"
            emptyDataMessage="No procedures"
            headers={
              Array [
                Object {
                  "key": "name",
                  "title": "Procedure Name",
                  "width": "41%",
                },
                Object {
                  "key": "date",
                  "title": "Procedure Date",
                  "transformer": [Function],
                  "width": "25%",
                },
                Object {
                  "key": "time",
                  "title": "Time",
                  "transformer": [Function],
                  "width": "15%",
                },
                Object {
                  "key": "source",
                  "title": "Source",
                  "width": "19%",
                },
                Object {
                  "display": "none",
                  "key": "sourceId",
                  "title": "SourceID",
                },
              ]
            }
            id="08102813-e8d0-4f45-aa95-ac0d633e69fd"
            isBtnCreateVisible={true}
            isLoading={true}
            listPerPageAmount={10}
            offset={0}
            onCellClick={[Function]}
            onCreate={[Function]}
            onHeaderCellClick={[Function]}
            setOffset={[Function]}
            sortingOrder="asc"
            table="procedures"
            totalEntriesAmount={0}
          />
        </div>
      </Col>
    </Row>
  </div>
</section>
`;

exports[`Component <Procedures /> should renders correctly and testing context and lifecycle componentWillReceiveProps 1`] = `
<section
  className="page-wrapper"
>
  <div
    className="section"
  >
    <Row
      bsClass="row"
      componentClass="div"
    >
      <Col
        bsClass="col"
        className="col-panel-main"
        componentClass="div"
        xs={12}
      >
        <div
          className="panel panel-primary"
        >
          <PluginListHeader
            currentPanel="proceduresMain"
            isBtnExpandVisible={true}
            isBtnTableVisible={false}
            name="proceduresMain"
            onExpand={[Function]}
            onFilterChange={[Function]}
            panelTitle="Procedures"
          />
          <PluginMainPanel
            columnNameSortBy="name"
            emptyDataMessage="No procedures"
            headers={
              Array [
                Object {
                  "key": "name",
                  "title": "Procedure Name",
                  "width": "41%",
                },
                Object {
                  "key": "date",
                  "title": "Procedure Date",
                  "transformer": [Function],
                  "width": "25%",
                },
                Object {
                  "key": "time",
                  "title": "Time",
                  "transformer": [Function],
                  "width": "15%",
                },
                Object {
                  "key": "source",
                  "title": "Source",
                  "width": "19%",
                },
                Object {
                  "display": "none",
                  "key": "sourceId",
                  "title": "SourceID",
                },
              ]
            }
            id="08102813-e8d0-4f45-aa95-ac0d633e69fd"
            isBtnCreateVisible={true}
            isLoading={true}
            listPerPageAmount={10}
            offset={0}
            onCellClick={[Function]}
            onCreate={[Function]}
            onHeaderCellClick={[Function]}
            setOffset={[Function]}
            sortingOrder="asc"
            table="procedures"
            totalEntriesAmount={0}
          />
        </div>
      </Col>
      <Col
        bsClass="col"
        className="col-panel-details"
        componentClass="div"
        xs={12}
      >
        <ProceduresDetail
          currentPanel="proceduresDetail"
          detail={
            Object {
              "author": "bob.smith@gmail.com",
              "currentStatus": "completed",
              "date": 1510579904000,
              "dateSubmitted": 1510659104000,
              "name": "123b",
              "notes": "123b",
              "originalComposition": "",
              "originalSource": "",
              "performer": "Performer",
              "procedureCode": "at0039",
              "procedureName": "123b",
              "procedureTerminology": "SNOMED-CT",
              "source": "ethercis",
              "sourceId": "08102813-e8d0-4f45-aa95-ac0d633e69fd",
              "time": 48704000,
            }
          }
          editedPanel={Object {}}
          expandedPanel="all"
          isSubmit={false}
          name="proceduresDetail"
          onCancel={[Function]}
          onEdit={[Function]}
          onExpand={[Function]}
          onSaveSettings={[Function]}
          onShow={[Function]}
          openedPanel="proceduresCreate"
        />
      </Col>
    </Row>
  </div>
</section>
`;

exports[`Component <Procedures /> should renders correctly with empty store 1`] = `
<section
  className="page-wrapper"
>
  <div
    className="section"
  >
    <Row
      bsClass="row"
      componentClass="div"
    >
      <Col
        bsClass="col"
        className=""
        componentClass="div"
        xs={12}
      >
        <div
          className="panel panel-primary"
        >
          <PluginListHeader
            currentPanel="proceduresMain"
            isBtnExpandVisible={false}
            isBtnTableVisible={false}
            name="proceduresMain"
            onExpand={[Function]}
            onFilterChange={[Function]}
            panelTitle="Procedures"
          />
          <PluginMainPanel
            columnNameSortBy="name"
            emptyDataMessage="No procedures"
            headers={
              Array [
                Object {
                  "key": "name",
                  "title": "Procedure Name",
                  "width": "41%",
                },
                Object {
                  "key": "date",
                  "title": "Procedure Date",
                  "transformer": [Function],
                  "width": "25%",
                },
                Object {
                  "key": "time",
                  "title": "Time",
                  "transformer": [Function],
                  "width": "15%",
                },
                Object {
                  "key": "source",
                  "title": "Source",
                  "width": "19%",
                },
                Object {
                  "display": "none",
                  "key": "sourceId",
                  "title": "SourceID",
                },
              ]
            }
            isBtnCreateVisible={true}
            isLoading={true}
            listPerPageAmount={10}
            offset={0}
            onCellClick={[Function]}
            onCreate={[Function]}
            onHeaderCellClick={[Function]}
            setOffset={[Function]}
            sortingOrder="asc"
            table="procedures"
            totalEntriesAmount={0}
          />
        </div>
      </Col>
    </Row>
  </div>
</section>
`;

exports[`Component <Procedures /> should renders correctly with forms error 1`] = `
<section
  className="page-wrapper"
>
  <div
    className="section"
  >
    <Row
      bsClass="row"
      componentClass="div"
    >
      <Col
        bsClass="col"
        className=""
        componentClass="div"
        xs={12}
      >
        <div
          className="panel panel-primary"
        >
          <PluginListHeader
            currentPanel="proceduresMain"
            isBtnExpandVisible={false}
            isBtnTableVisible={false}
            name="proceduresMain"
            onExpand={[Function]}
            onFilterChange={[Function]}
            panelTitle="Procedures"
          />
          <PluginMainPanel
            columnNameSortBy="name"
            emptyDataMessage="No procedures"
            headers={
              Array [
                Object {
                  "key": "name",
                  "title": "Procedure Name",
                  "width": "41%",
                },
                Object {
                  "key": "date",
                  "title": "Procedure Date",
                  "transformer": [Function],
                  "width": "25%",
                },
                Object {
                  "key": "time",
                  "title": "Time",
                  "transformer": [Function],
                  "width": "15%",
                },
                Object {
                  "key": "source",
                  "title": "Source",
                  "width": "19%",
                },
                Object {
                  "display": "none",
                  "key": "sourceId",
                  "title": "SourceID",
                },
              ]
            }
            id="08102813-e8d0-4f45-aa95-ac0d633e69fd"
            isBtnCreateVisible={true}
            isLoading={true}
            listPerPageAmount={10}
            offset={0}
            onCellClick={[Function]}
            onCreate={[Function]}
            onHeaderCellClick={[Function]}
            setOffset={[Function]}
            sortingOrder="asc"
            table="procedures"
            totalEntriesAmount={0}
          />
        </div>
      </Col>
    </Row>
  </div>
</section>
`;

exports[`Component <Procedures /> should renders correctly with proceduresDetail and testing Create Panel 1`] = `
<section
  className="page-wrapper"
>
  <div
    className="section"
  >
    <Row
      bsClass="row"
      componentClass="div"
    >
      <Col
        bsClass="col"
        className="col-panel-main"
        componentClass="div"
        xs={12}
      >
        <div
          className="panel panel-primary"
        >
          <PluginListHeader
            currentPanel="proceduresMain"
            isBtnExpandVisible={false}
            isBtnTableVisible={false}
            name="proceduresMain"
            onExpand={[Function]}
            onFilterChange={[Function]}
            panelTitle="Procedures"
          />
          <PluginMainPanel
            columnNameSortBy="name"
            emptyDataMessage="No procedures"
            headers={
              Array [
                Object {
                  "key": "name",
                  "title": "Procedure Name",
                  "width": "41%",
                },
                Object {
                  "key": "date",
                  "title": "Procedure Date",
                  "transformer": [Function],
                  "width": "25%",
                },
                Object {
                  "key": "time",
                  "title": "Time",
                  "transformer": [Function],
                  "width": "15%",
                },
                Object {
                  "key": "source",
                  "title": "Source",
                  "width": "19%",
                },
                Object {
                  "display": "none",
                  "key": "sourceId",
                  "title": "SourceID",
                },
              ]
            }
            id="08102813-e8d0-4f45-aa95-ac0d633e69fd"
            isBtnCreateVisible={false}
            isLoading={true}
            listPerPageAmount={10}
            offset={0}
            onCellClick={[Function]}
            onCreate={[Function]}
            onHeaderCellClick={[Function]}
            setOffset={[Function]}
            sortingOrder="asc"
            table="procedures"
            totalEntriesAmount={0}
          />
        </div>
      </Col>
      <Col
        bsClass="col"
        className="col-panel-details"
        componentClass="div"
        xs={12}
      >
        <PluginCreate
          componentForm={
            <ReduxForm
              isSubmit={false}
            />
          }
          currentPanel="proceduresCreate"
          expandedPanel="all"
          isCreatePanelVisible={true}
          isImport={false}
          name="proceduresCreate"
          onCancel={[Function]}
          onExpand={[Function]}
          onSaveSettings={[Function]}
          onShow={[Function]}
          openedPanel="proceduresCreate"
          title="Create Procedure"
        />
      </Col>
    </Row>
  </div>
</section>
`;

exports[`Component <Procedures /> should renders correctly with proceduresDetail and testing Create Panel 2`] = `
<section
  className="page-wrapper"
>
  <div
    className="section"
  >
    <Row
      bsClass="row"
      componentClass="div"
    >
      <Col
        bsClass="col"
        className="col-panel-main"
        componentClass="div"
        xs={12}
      >
        <div
          className="panel panel-primary"
        >
          <PluginListHeader
            currentPanel="proceduresMain"
            isBtnExpandVisible={false}
            isBtnTableVisible={false}
            name="proceduresMain"
            onExpand={[Function]}
            onFilterChange={[Function]}
            panelTitle="Procedures"
          />
          <PluginMainPanel
            columnNameSortBy="name"
            emptyDataMessage="No procedures"
            headers={
              Array [
                Object {
                  "key": "name",
                  "title": "Procedure Name",
                  "width": "41%",
                },
                Object {
                  "key": "date",
                  "title": "Procedure Date",
                  "transformer": [Function],
                  "width": "25%",
                },
                Object {
                  "key": "time",
                  "title": "Time",
                  "transformer": [Function],
                  "width": "15%",
                },
                Object {
                  "key": "source",
                  "title": "Source",
                  "width": "19%",
                },
                Object {
                  "display": "none",
                  "key": "sourceId",
                  "title": "SourceID",
                },
              ]
            }
            id="08102813-e8d0-4f45-aa95-ac0d633e69fd"
            isBtnCreateVisible={false}
            isLoading={true}
            listPerPageAmount={10}
            offset={0}
            onCellClick={[Function]}
            onCreate={[Function]}
            onHeaderCellClick={[Function]}
            setOffset={[Function]}
            sortingOrder="asc"
            table="procedures"
            totalEntriesAmount={0}
          />
        </div>
      </Col>
      <Col
        bsClass="col"
        className="col-panel-details"
        componentClass="div"
        xs={12}
      >
        <PluginCreate
          componentForm={
            <ReduxForm
              isSubmit={false}
            />
          }
          currentPanel="proceduresCreate"
          expandedPanel="all"
          isCreatePanelVisible={true}
          isImport={false}
          name="proceduresCreate"
          onCancel={[Function]}
          onExpand={[Function]}
          onSaveSettings={[Function]}
          onShow={[Function]}
          openedPanel="proceduresCreate"
          title="Create Procedure"
        />
      </Col>
    </Row>
  </div>
</section>
`;

exports[`Component <Procedures /> should renders correctly with proceduresDetail and testing Detail Panel 1`] = `
<section
  className="page-wrapper"
>
  <div
    className="section"
  >
    <Row
      bsClass="row"
      componentClass="div"
    >
      <Col
        bsClass="col"
        className="col-panel-main"
        componentClass="div"
        xs={12}
      >
        <div
          className="panel panel-primary"
        >
          <PluginListHeader
            currentPanel="proceduresMain"
            isBtnExpandVisible={true}
            isBtnTableVisible={false}
            name="proceduresMain"
            onExpand={[Function]}
            onFilterChange={[Function]}
            panelTitle="Procedures"
          />
          <PluginMainPanel
            columnNameSortBy="name"
            emptyDataMessage="No procedures"
            headers={
              Array [
                Object {
                  "key": "name",
                  "title": "Procedure Name",
                  "width": "41%",
                },
                Object {
                  "key": "date",
                  "title": "Procedure Date",
                  "transformer": [Function],
                  "width": "25%",
                },
                Object {
                  "key": "time",
                  "title": "Time",
                  "transformer": [Function],
                  "width": "15%",
                },
                Object {
                  "key": "source",
                  "title": "Source",
                  "width": "19%",
                },
                Object {
                  "display": "none",
                  "key": "sourceId",
                  "title": "SourceID",
                },
              ]
            }
            id="08102813-e8d0-4f45-aa95-ac0d633e69fd"
            isBtnCreateVisible={true}
            isLoading={true}
            listPerPageAmount={10}
            offset={0}
            onCellClick={[Function]}
            onCreate={[Function]}
            onHeaderCellClick={[Function]}
            setOffset={[Function]}
            sortingOrder="asc"
            table="procedures"
            totalEntriesAmount={0}
          />
        </div>
      </Col>
      <Col
        bsClass="col"
        className="col-panel-details"
        componentClass="div"
        xs={12}
      >
        <ProceduresDetail
          currentPanel="proceduresDetail"
          detail={
            Object {
              "author": "bob.smith@gmail.com",
              "currentStatus": "completed",
              "date": 1510579904000,
              "dateSubmitted": 1510659104000,
              "name": "123b",
              "notes": "123b",
              "originalComposition": "",
              "originalSource": "",
              "performer": "Performer",
              "procedureCode": "at0039",
              "procedureName": "123b",
              "procedureTerminology": "SNOMED-CT",
              "source": "ethercis",
              "sourceId": "08102813-e8d0-4f45-aa95-ac0d633e69fd",
              "time": 48704000,
            }
          }
          editedPanel={Object {}}
          expandedPanel="all"
          isSubmit={false}
          name="proceduresDetail"
          onCancel={[Function]}
          onEdit={[Function]}
          onExpand={[Function]}
          onSaveSettings={[Function]}
          onShow={[Function]}
          openedPanel="procedurePanel"
        />
      </Col>
    </Row>
  </div>
</section>
`;

exports[`Component <Procedures /> should renders correctly with proceduresDetail and testing Detail Panel 2`] = `
<section
  className="page-wrapper"
>
  <div
    className="section full-panel full-panel-details"
  >
    <Row
      bsClass="row"
      componentClass="div"
    >
      <Col
        bsClass="col"
        className="col-panel-details"
        componentClass="div"
        xs={12}
      >
        <ProceduresDetail
          currentPanel="proceduresDetail"
          detail={
            Object {
              "author": "bob.smith@gmail.com",
              "currentStatus": "completed",
              "date": 1510579904000,
              "dateSubmitted": 1510659104000,
              "name": "123b",
              "notes": "123b",
              "originalComposition": "",
              "originalSource": "",
              "performer": "Performer",
              "procedureCode": "at0039",
              "procedureName": "123b",
              "procedureTerminology": "SNOMED-CT",
              "source": "ethercis",
              "sourceId": "08102813-e8d0-4f45-aa95-ac0d633e69fd",
              "time": 48704000,
            }
          }
          editedPanel={Object {}}
          expandedPanel="procedurePanel"
          isSubmit={false}
          name="proceduresDetail"
          onCancel={[Function]}
          onEdit={[Function]}
          onExpand={[Function]}
          onSaveSettings={[Function]}
          onShow={[Function]}
          openedPanel="procedurePanel"
        />
      </Col>
    </Row>
  </div>
</section>
`;

exports[`Component <Procedures /> should renders correctly with proceduresDetail and testing Detail Panel 3`] = `
<section
  className="page-wrapper"
>
  <div
    className="section"
  >
    <Row
      bsClass="row"
      componentClass="div"
    />
  </div>
</section>
`;
